# pyAqTest

./: .gitignore  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  format_csv_slug_data.py  pyproject.toml  requirements.txt  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
presentation/: flow_chart.py
src/pyAqTest/: __init__.py  app.py  aquifer.py  aquifer_test.py  batch_processing.py  butler.py  cli.py  fit_utils.py  gw_pump_test.py  readers.py  report.py  settings.py  slug_tests.py  utils.py  wells.py
src/pyAqTest/dashboard/: __init__.py  analysis_callbacks.py  callbacks.py  components.py  data_storage.py  layout.py  results_callbacks.py  utils.py
src/pyAqTest/trash/: bouwer_rice.py  drawing.py  recovery.py  rice2.py  rice3.py
tests/: Sensitivity_analysis.py  __init__.py  benchmark.py  cc.py  compare_bower_butler.py  compile_WDR_data.py  move_mouse.py  robust_reg.py  run_batch_from_init.py  run_batch_slugs.py  run_report_generator.py  run_slug.py  run_slug_bouwer_rice.py  run_slug_butler.py  run_wrd_data.py  slug_test_config.ini  test_batch_processing.py  test_gw_pump_test.py  test_wells.py  wrd_batch_run.py
tests/datasets/: Butler_1.txt  butler_method.csv
