[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyAqTest"
version = "0.1.0"
description = "A toolbox to analyse pump test data and estimate hydraulic properties."
readme = "README.rst"
authors = [
  {name = "Ayman H. Alzraiee", email = "aalzraiee@gsi-net.net"}
]
maintainers = [
  {name = "Ayman H. Alzraiee", email = "aalzraiee@gsi-net.net"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [
  
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/aymanalz/pytestaq/issues"
changelog = "https://github.com/aymanalz/pytestaq/blob/master/changelog.md"
homepage = "https://github.com/aymanalz/pytestaq"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

[project.scripts]
mycli = "cli:main"

